--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-env": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
     "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.13.13",
     "@types/react-redux": "^7.1.34",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
