--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "socket.io-client": "^4.8.1",
     "use-places-autocomplete": "^4.0.1"
   },
@@ -49,7 +49,7 @@
     "@babel/preset-env": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.13.13",
+    "@types/node": "^22.14.1",
     "@types/react-redux": "^7.1.34",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
